force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_COMMENT__c/fields/BCNR_OPN_YN__c.field-meta.xml
<CustomField>
    <fullName>BCNR_OPN_YN__c</fullName>
    <label>BCNR_OPN_YN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>