force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_COMMENT__c/fields/DLWR_NM__c.field-meta.xml
<CustomField>
    <fullName>DLWR_NM__c</fullName>
    <label>DLWR_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>