force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_COMMENT__c/fields/PRS_BD_NO__c.field-meta.xml
<CustomField>
    <fullName>PRS_BD_NO__c</fullName>
    <label>PRS_BD_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>