force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_COMMENT__c/fields/PRS_CL_NM__c.field-meta.xml
<CustomField>
    <fullName>PRS_CL_NM__c</fullName>
    <label>PRS_CL_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>