force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_COMMENT__c/fields/PRS_DT__c.field-meta.xml
<CustomField>
    <fullName>PRS_DT__c</fullName>
    <label>PRS_DT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>