force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_COMMENT__c/fields/PRSR_EMP_NO__c.field-meta.xml
<CustomField>
    <fullName>PRSR_EMP_NO__c</fullName>
    <label>PRSR_EMP_NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>