force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_COMMENT__c/fields/PRSR_NM__c.field-meta.xml
<CustomField>
    <fullName>PRSR_NM__c</fullName>
    <label>PRSR_NM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>