force-app/main/default/objects/IF_IFRESH_SFDC_VOC_INFO_COMMENT__c/fields/txt__c.field-meta.xml
<CustomField>
    <fullName>txt__c</fullName>
    <label>txt</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>